--- a/blog/src/main/resources/templates/blog.html
+++ b/blog/src/main/resources/templates/blog.html
@@ -4,8 +4,8 @@
     <title>Blog</title>
     <meta charset="utf-8">
     <meta name="Viewport" content="width=device-wdith, initial-scale=1.0">
-    <link rel="stylesheet" href="blog.css">
-	<script src="blog.js"></script>
+    <link rel="stylesheet" th:href="@{/CSS/blog.css}">
+	<script th:src="@{/js/blog.js}"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
@@ -20,53 +20,63 @@
     <div>
       <header class="black-bar">
         <h1>My Blog</h1>
-        <input id="new-article" class="button"  type="submit" value="写新文章">
-        <p id="p1">退出登录</p>
+		<a th:href="@{/admin/blog/new-blog}" id="new-article">写新文章</a>
+        <form class="logout-form" th:action="@{/logout}" method="post">
+          <a id="p1" href="#" onclick="this.parentNode.submit()">退出登录</a>
+        </form>
+        <p id="p3" th:text="${userName}"></p>
       </header>
-	  </div>
+	</div>
 	
+	<!-- 添加新card -->
+    <div class="card" th:each="blog:${blogList}">
+      <img th:src="@{/blog-image/{items}(items=${blog.blogImage})}">
+      <div class="text">
+        <h2 th:text=" ${blog.blogTitle}" class="card-title"></h2>
+        <p th:text=" ${blog.blogDate}" class="date"></p>
+        <p th:text=" ${blog.message}" id="p2"></p>
+        
+        <div>
+          <a th:href="@{/blog-content/{blogId}}" calss="button" id="more">查看详细</a>
+        </div>
+
+        <form th:action="'/admin/blog/delete/' + ${blog.blogId}" method="POST">
+          <input id="delete-button" type="submit" value="删除"> 
+        </form>
+      </div>
+    </div>
+    
+
+					
     <div class="card">
-      <img src="image/00000015.JPG">
+      <img th:src="@{/blog-image/00000015.JPG}">
       <div class="text">
         <h2 class="card-title">谷川岳登山</h2>
         <p class="date">2021年12月29日</p>
         <p id="p2">谷川岳是位群马县西部、与新泻县县境交界的山峰于，其中包括上信越高原国立公园，山顶部有二个山峰分别叫作“涛吗”之耳、“奥开”之耳，也称作二只耳。</p>
-        <input class="button"  type="submit" value="详细内容">
+        <input class="button" id="more" type="submit" value="详细内容" onclick="location.href='/admin/blog-content'">
       </div>
     </div>
 	
     <div class="card">
-      <img src="image/20221106_015113.jpg">
+      <img th:src="@{/blog-image/20221106_015113.jpg}">
       <div class="text">
         <h2 class="card-title">海洋堂摇曳露营扭蛋涂装</h2>
         <p class="date">2022年10月12日</p>
         <p id="p2">采用 1/24 比例制作，包含人物造型、配件露营用具皆与一般版完全不同，「各务原抚子」、「志摩凛」、「大垣千明」、「犬山葵」采用新规的服装造型与姿势，更追加故事中期一同参与露营的伙伴「齐藤惠那」与他的爱犬「竹轮」，重现五位主要角色合体的新场景！</p>
-        <input class="button"  type="submit" value="详细内容">
+        <input class="button" id="more" type="submit" value="详细内容" onclick="location.href='/admin/blog-content'">
       </div>
     </div>
 	
     <div class="card">
-      <img src="image/20220810_045339.jpg">
+      <img th:src="@{/blog-image/20220810_045339.jpg}">
       <div class="text">
         <h2 class="card-title">富士山登山</h2>
         <p class="date">2022年8月10日</p>
         <p id="p2">富士山，位于日本本州岛中南部，东距东京约80千米，北纬35.361°，东经138.728°，海拔3776米，横跨日本静冈县与山梨县，占地面积约1200平方千米，体积约为500立方千米。富士山是日本最高峰，世界上最大的活火山之一。</p>
-        <input class="button"  type="submit" value="详细内容">
+        <input class="button" id="more" type="submit" value="详细内容" onclick="location.href='/admin/blog-content'">
       </div>
     </div>
 	
-
-	
-	  <div class="card">
-	    <img src="image/20230524_170812.jpg">
-	    <div class="text">
-        <h2 class="card-title">仕事猫景品时钟测评</h2>
-	      <p class="date">2021年4月10日</p>
-		    <p class="p2">时间不准，不要买！</p>
-		    <input class="button"  type="submit" value="详细内容">
-	    </div>
-    </div>
-	
-
   </body>
 </html>
