--- a/blog/src/main/resources/static/CSS/new-blog.css
+++ b/blog/src/main/resources/static/CSS/new-blog.css
@@ -29,11 +29,24 @@ h2 {
   color: #FFFFFF;
   font-family: 'Noto Sans SC', sans-serif;
   font-size: 14px;
-  cursor: pointer;
   position: absolute;
   right: 20px;
+  text-decoration: none;
 }
+.logout-form {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+}
+#p3 {
+  color: #FFFFFF;
+  font-family: 'Noto Sans SC', sans-serif;
+  font-size: 14px;
+  position: absolute;
+  right: 220px; 
+}
 label {
   color: #FFFFFF;
   font-family: 'Noto Sans SC', sans-serif;
@@ -43,10 +56,24 @@ label {
   margin-bottom: 5px;
 }
 
-#back-home {
+#back {	
+  width: 80px;
+  height: 30px;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  color: #FFFFFF;
   font-family: 'Noto Sans SC', sans-serif;
   font-size: 14px;
-  color: #FFFFFF;
+  cursor: pointer;
+  text-decoration: none;
+  
+  
+  border:0px;
+  border-radius: 15px;
+  background-color: #F68657;
   position: absolute;
   right: 100px;
   cursor: pointer;
@@ -89,13 +116,24 @@ form {
   flex-direction: column;
 }
 #release-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  text-decoration: none;
+  
+  color: #FFFFFF;
+  font-family: 'Noto Sans SC', sans-serif;
+  font-size: 14px;
+  cursor: pointer;
+  text-decoration: none;
   background-color: #F68657;
   height: 32px;
   width: 300px;
   border: none;
   color: #FFFFFF;
   font-family: 'Noto Sans SC', sans-serif;
-  font-size: 13px;
+  font-size: 14px;
   margin: 8px;
   cursor: pointer;
 }
